refactor: [ranking] 코드 정리