@@ -5,9 +5,12 @@ import com.querydsl.jpa.impl.JPAQueryFactory;
 import com.studyMate.studyMate.domain.ranking.dto.GetUserRankingResponseDto;
 import com.studyMate.studyMate.domain.ranking.dto.RankingUserDto;
 import com.studyMate.studyMate.domain.user.entity.User;
+import com.studyMate.studyMate.global.error.CustomException;
+import com.studyMate.studyMate.global.error.ErrorCode;
 import com.studyMate.studyMate.global.redis.RedisKeyFactory;
 import com.studyMate.studyMate.global.redis.RedisService;
 import jakarta.persistence.EntityManager;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.redis.core.ZSetOperations;
@@ -24,93 +27,41 @@ public class RankingRepositoryImpl implements RankingRepository {
 
     private final JPAQueryFactory queryFactory;
     private final RedisService redisService;
-    private final EntityManager entityManager;
 
     public RankingRepositoryImpl(EntityManager entityManager, RedisService redisService) {
         this.queryFactory = new JPAQueryFactory(entityManager);
         this.redisService = redisService;
-        this.entityManager = entityManager;
     }
 
     private static final String RANKING_KEY = RedisKeyFactory.userRankingSortedSet();
 
-    // DB 기반 랭킹 조회 (구 QueryDSL)
-    @Override
-    public GetUserRankingResponseDto findUsersAndRanking(String userId, Pageable pageable) {
-        // 나보다 점수 높은 놈들 + 동점자 중에 가입일 빠른 놈들 카운트
-        Long gtThanMyScoreUsers = queryFactory
-            .select(user.count())
-            .from(user)
-            .where(
-                    user.score.gt(
-                            JPAExpressions.select(user.score)
-                                    .from(user)
-                                    .where(user.userId.eq(userId))
-                    )
-                    .or(
-                    user.score.eq(
-                            JPAExpressions.select(user.score)
-                                .from(user)
-                                .where(user.userId.eq(userId))
-                            )
-                            .and(user.createdDt.lt(
-                                JPAExpressions.select(user.createdDt)
-                                    .from(user)
-                                    .where(user.userId.eq(userId))
-                            ))
-                    )
-                )
-                .fetchOne();
-
-        Integer myRanking = gtThanMyScoreUsers.intValue() + 1;
-
-        // 페이징 처리해서 유저 목록 가져오기
-        List<User> userList = queryFactory
-                .selectFrom(user)
-                .orderBy(
-                        user.score.desc(),
-                        user.createdDt.asc()
-                )
-                .offset(pageable.getOffset())
-                .limit(pageable.getPageSize())
-                .fetch();
-
-        // 순위 계산
-        int stRank = pageable.getPageNumber() * pageable.getPageSize() + 1;
-
-        List<RankingUserDto> rankingUserDtos = new ArrayList<>();
-
-        for (int i = 0; i < userList.size(); i++) {
-            User u = userList.get(i);
-            rankingUserDtos.add(
-                    RankingUserDto.builder()
-                            .userId(u.getUserId())
-                            .loginId(u.getLoginId())
-                            .nickname(u.getNickname())
-                            .profileImg(u.getProfileImg())
-                            .userScore(u.getScore())
-                            .rankNo(stRank + i)
-                            .build()
-            );
-        }
-
-        return GetUserRankingResponseDto.builder()
-                .myRanking(myRanking)
-                .list(rankingUserDtos)
-                .pageSize(pageable.getPageSize())
-                .pageNumber(pageable.getPageNumber())
-                .build();
-    }
-
-    // Redis Sorted Set 기반 랭킹 조회 (신 Redis Sorted Set)
+    // 랭킹 조회 개선 (캐시미스 시, 1500ms 수준 || 캐시히트 시, 600 ms 수준)
     @Override
     public GetUserRankingResponseDto findUsersAndRankingWithRedis(String userId, Pageable pageable) {
         try {
             // Redis가 비어있는지 체크
             Long totalSize = redisService.getSortedSetSize(RANKING_KEY);
+
+            // Initailize하고, 그래도 비었으면 EMPTY RANKING (캐시 아발란체 방지)
             if (totalSize == null || totalSize == 0) {
-                log.warn("Redis 랭킹 데이터가 비어있음. 초기화 시작...");
+                log.info("[랭킹 데이터 조회] Redis 캐시 미스, 이니셜라이징");
                 initializeRankings();
+
+                // 초기화 후 재확인
+                totalSize = redisService.getSortedSetSize(RANKING_KEY);
+                if (totalSize == null || totalSize == 0) {
+                    // "EMPTY_RANKING" 더미 키를 저장하여 캐시 아발란체 방지
+                    redisService.addToSortedSet(RANKING_KEY, "EMPTY_RANKING", 0.0);
+                    log.info("[랭킹 데이터 조회] 빈 랭킹 저장");
+                    
+                    // 바로 빈 결과 반환
+                    return GetUserRankingResponseDto.builder()
+                            .myRanking(null)
+                            .list(new ArrayList<>())
+                            .pageSize(pageable.getPageSize())
+                            .pageNumber(pageable.getPageNumber())
+                            .build();
+                }
             }
 
             // 내 랭킹 조회
@@ -121,46 +72,45 @@ public class RankingRepositoryImpl implements RankingRepository {
             long start = (long) pageable.getPageNumber() * pageable.getPageSize();
             long end = start + pageable.getPageSize() - 1;
 
-            // 해당 범위의 랭킹 데이터 조회
-            Set<ZSetOperations.TypedTuple<String>> rangeWithScores =
-                    redisService.getRangeWithScoresFromSortedSet(RANKING_KEY, start, end);
+            // 페이징 범위의 랭킹 데이터 조회
+            Set<ZSetOperations.TypedTuple<String>> rangeWithScores = redisService.getRangeWithScoresFromSortedSet(RANKING_KEY, start, end);
 
-            // userId 리스트 추출
+            // userId 리스트 뽑고,
             List<String> userIds = rangeWithScores.stream()
                     .map(ZSetOperations.TypedTuple::getValue)
-                    .collect(Collectors.toList());
+                    .toList();
 
-            // DB에서 사용자 정보 한방에 조회
-            List<User> users = entityManager.createQuery(
-                    "SELECT u FROM User u WHERE u.userId IN :userIds", User.class)
-                    .setParameter("userIds", userIds)
-                    .getResultList();
+            // IN 쿼리문으로 유저 조회
+            List<User> users = queryFactory
+                    .selectFrom(user)
+                    .where(user.userId.in(userIds))
+                    .fetch();
+
             Map<String, User> userMap = users.stream()
                     .collect(Collectors.toMap(User::getUserId, u -> u));
 
             // 랭킹 DTO 생성
+            List<ZSetOperations.TypedTuple<String>> tupleList = new ArrayList<>(rangeWithScores);
             List<RankingUserDto> rankingUserDtos = new ArrayList<>();
-            int rank = (int) start + 1;
 
-            for (ZSetOperations.TypedTuple<String> tuple : rangeWithScores) {
-                String uid = tuple.getValue();
-                User foundUser = userMap.get(uid);
+            for (int i = 0; i < tupleList.size(); i++) {
+                User foundUser = userMap.get(tupleList.get(i).getValue());
+                if (foundUser == null) continue;
 
-                if (foundUser != null) {
-                    Double redisScore = tuple.getScore();
-                    int userScore = redisScore != null ? (int) Math.floor(redisScore) : 0;
+                // 유저 점수 계산
+                int userScore = tupleList.get(i).getScore() != null 
+                    ? (int) Math.floor(tupleList.get(i).getScore()) 
+                    : 0;
 
-                    rankingUserDtos.add(RankingUserDto.builder()
-                            .userId(foundUser.getUserId())
-                            .loginId(foundUser.getLoginId())
-                            .nickname(foundUser.getNickname())
-                            .profileImg(foundUser.getProfileImg())
-                            .userScore(userScore)
-                            .rankNo(rank)
-                            .build());
-
-                    rank++;
-                }
+                // DTO 추가
+                rankingUserDtos.add(RankingUserDto.builder()
+                    .userId(foundUser.getUserId())
+                    .loginId(foundUser.getLoginId())
+                    .nickname(foundUser.getNickname())
+                    .profileImg(foundUser.getProfileImg())
+                    .userScore(userScore)
+                    .rankNo((int) start + 1 + i)
+                    .build());
             }
 
             return GetUserRankingResponseDto.builder()
@@ -171,8 +121,8 @@ public class RankingRepositoryImpl implements RankingRepository {
                     .build();
 
         } catch (Exception e) {
-            log.warn("Redis 랭킹 조회 실패, DB로 fallback: {}", e.getMessage());
-            return findUsersAndRanking(userId, pageable);
+            log.warn("랭킹 조회 실패 : {}", e.getMessage());
+            throw new CustomException(ErrorCode.UNKNOWN_ERROR);
         }
     }
 
@@ -183,8 +133,8 @@ public class RankingRepositoryImpl implements RankingRepository {
         redisService.addToSortedSet(RANKING_KEY, userId, redisScore);
     }
 
-    // Redis 점수 계산 (동점자 처리)
-    // score를 정수부, createdTimestamp를 소수부로 결합 + 가입일 빠를수록 높은 순위
+    // Redis 점수 계산 (동점 처리용)
+    // score를 정수부, user 가입일을 소수부로 결합 + 가입일 빠를수록 높은 순위
     private double calculateRedisScore(int score, long createdTimestamp) {
         double normalizedTimestamp = 1.0 - (createdTimestamp / 10000000000.0);
         return score + normalizedTimestamp;
@@ -195,8 +145,9 @@ public class RankingRepositoryImpl implements RankingRepository {
     public void initializeRankings() {
         log.info("랭킹 초기화 시작");
 
-        List<User> allUsers = entityManager.createQuery("SELECT u FROM User u", User.class)
-                .getResultList();
+        List<User> allUsers = queryFactory
+                .selectFrom(user)
+                .fetch();
 
         for (User user : allUsers) {
             long createdTimestamp = user.getCreatedDt().atZone(java.time.ZoneId.systemDefault()).toEpochSecond();
